# panel-design-manager

./: CMakeLists.txt
debian/: changelog  control  copyright  n4d-paneldesignmanager-client.install  n4d-paneldesignmanager-client.postinst  n4d-paneldesignmanager-server.install  n4d-paneldesignmanager-server.postinst  panel-design-manager-common.dirs  panel-design-manager-common.install  panel-design-manager.install  panel-design-manager.postinst  rules
lliurex-po/panel-design-manager/: panel-design-manager.pot
llx-resources/panel-design-manager/desktops/: panel-design-manager.desktop
n4d/client/: PanelDesignManagerClient  PanelDesignManagerClient.py
n4d/server/: PanelDesignManagerServer  PanelDesignManagerServer.py
rsrc/: resources.qrc
src/: CMakeLists.txt  locale.hpp  loginwidget.cpp  loginwidget.hpp  main.cpp  n4dcontext.cpp  n4dcontext.hpp  setupwidget.cpp  setupwidget.hpp  window.cpp  window.hpp
xsession/: 89lliurex-pdm
